# lab

./: .bazel_fix_commands.json  .bazelignore  .bazelrc  .clang-format  .clang-tidy  .clangd  .gitignore  .luacheckrc  .luarc.json  .pre-commit-config.yaml  .prettierrc.json  .yamlfmt.yaml  BUILD  LICENSE  MODULE.bazel  Makefile  README.md  _typos.toml  buf.yaml  go.mod  go.sum  go_checksum_sha256  go_install  go_install.sh  pyproject.toml  refresh_commands
.github/workflows/: book_ci.yml  check_ci.yml  ci_analyze.yml  ci_cc_bazel.yml  ci_go.yml  dp_ci.yml  go.yml  go_ci.yml  iq_bazel.yml  iq_ci.yml  x_ci.yml
book/: README.md
book/algorithms/: README.md
book/irex/: Makefile  build  tsconfig.json
book/irex/csvimport/: doc.go  import.go  import_test.go  parse.go  parse_test.go  scanner.go  scanner_test.go
book/irex/finserv/: doc.go  serve_notfound.go  serve_root.go  server.go
book/irex/intent/: doc.go  fulfill.go  fulfill_ping.go  fulfill_plot.go
book/irex/market/: client.go  date_range.go  date_range_test.go  doc.go  server.go  service.go  service_test.go
book/irex/pb/: feature.pb.go  feature.proto  gen.go  intent.pb.go  intent.proto  market.pb.go  market.proto  market_service.pb.go  market_service.proto  market_service_grpc.pb.go  page.pb.go  page.proto  ping_feature.pb.go  ping_feature.proto  ping_intent.pb.go  ping_intent.proto  plot_feature.pb.go  plot_feature.proto  plot_intent.pb.go  plot_intent.proto  symbol.pb.go  symbol.proto
book/irex/query/: doc.go  parse_plot.go  understand.go  understand_test.go
book/irex/render/: render.go
book/irex/serv/: doc.go  serve_notfound.go  serve_root.go  server.go
book/irex/web/: doc.go  server.go  server_test.go
book/ostep/: README.md
book/ostep/cpu/: README.md
book/ostep/mem/: README.md
book/ostep/process/: README.md
check/: go-fieldalignment  go-fix  go-staticcheck  go-vet  make-lint  yaml-lint
check/cmd/check-copyright/: main.go
check/cmd/check-go-test/: main.go
check/todo/: run.go  run_test.go
cluster/: README.md  lab.md  net.lab.nuc.md  rsync_all
cluster/doc/: jail.md
cluster/laptop/: README.md
cluster/net.lab.dev/: README.md  rsync.files-from
cluster/net.lab.dns/: README.md  rsync.files-from
cluster/net.lab.jammy/: README.md  rsync.files-from
cluster/net.lab.ldap/: README.md  rsync.files-from
cluster/net.lab.nuc/: README.md  rsync.files-from
cluster/net.lab.nuc.dev/: README.md  rsync.files-from
cluster/net.lab.nuc.ldap/: README.md  rsync.files-from
cluster/net.lab.nuc.ubuntu/: README.md  rsync.files-from
cluster/nuc.lab.net/: README.md
dp/: README.md
dp/errors/: doc.go  write.go  write_test.go
dp/graph/: README.md
freebsd/rc/: rc.jail  rc_jail
git/: log-bydate
go/flags/: doc.go  error.go  error_test.go  flag_set.go  flag_set_test.go  string_list.go  string_list_example_test.go  string_list_test.go
go/slices/: doc.go  map.go  map_test.go
go/tests/: cmp.go  cmp_test.go  doc.go  golden_file.go  golden_file_test.go
home/: Makefile  README.md  gitconfig  tcshrc  tmux.conf  vimrc
home/brew/: Makefile  packages.txt
home/ctags.d/: Makefile  exclude.ctags
home/doc/: vim_plugins.md
home/go/: Makefile
home/npm/: Makefile  packages.txt
home/nvim/: Makefile  init.lua
home/pkg/: Makefile  packages.txt
home/rust/: Makefile  packages.txt
home/tcshrc.d/: Makefile  cc.tcsh  completion.tcsh  dev.tcsh  env.tcsh  go.tcsh  history.tcsh  npm.tcsh  nvim.tcsh  prompt.tcsh  rust.tcsh  tmux.tcsh
home/vim/: Makefile
home/vimrc.d/: Makefile  asyncomplete.vim  format.vim  lsp.vim  man.vim  nerdtree.vim  skeleton.vim  spell.vim  tagbar.vim
infra/: README.md  rsync  rsync_all
infra/ansible/: README.md  ansible.cfg  jail_dns.yml  jail_ldap.yml  jail_ssl.yml  nuc.yaml  nuc.yml  nuc_base.yml  nuc_bootstrap.yaml  nuc_bootstrap.yml  nuc_jail.yml  nuc_jails.yml  requirements.yaml
infra/doc/: README.md
infra/laptop/: README.md  rsync.files-from
infra/net.lab.bastion/: rsync.files-from
infra/net.lab.dev/: README.md  rsync.files-from
infra/net.lab.dns/: README.md  rsync.files-from
infra/net.lab.jammy/: README.md
infra/net.lab.ldap/: README.md  rsync.files-from
infra/net.lab.nuc/: README.md  rsync.files-from
infra/net.lab.pkg/: rsync.files-from
infra/net.lab.www/: rsync.files-from
infra/rc/: rc.jail  rc_jail
iq/: README.md
iq/1/: README.md
iq/10/: README.md
iq/11/: README.md
iq/12/: README.md
iq/21/: README.md
iq/22/: README.md
iq/23/: README.md
iq/24/: README.md
iq/24/insert/: BUILD.bazel  find.cc  find.go  find.h  find_example_test.go  find_test.cc  find_test.go
iq/25/: README.md
iq/26/: README.md
iq/26/cut/: BUILD.bazel  find.cc  find.go  find.h  find_example_test.go  find_test.cc  find_test.go
iq/27/: README.md
iq/27/lower/: BUILD.bazel  find.cc  find.go  find.h  find_example_test.go  find_test.cc  find_test.go
iq/28/: README.md
iq/28/upper/: BUILD.bazel  find.cc  find.go  find.h  find_test.cc  find_test.go
iq/29/: README.md
iq/3/: README.md
iq/30/: README.md
iq/31/: README.md
iq/32/: README.md
iq/33/: README.md
iq/34/: README.md
iq/35/: README.md
iq/36/: README.md
iq/37/: README.md
iq/38/: README.md
iq/39/: README.md
iq/40/: README.md
iq/create/: run.go
iq/info/: info.go  info_example_test.go  info_test.go
iq/pb/: gen.go  question.pb.go  question.proto
iq/registry/: questions.txtpb  registry.go  registry_example_test.go  registry_test.go
nvim/: Makefile
nvim/plugin/: Makefile
toolchain/: BUILD  cc_toolchain_config.bzl
vim/: Makefile
vim/autoload/: Makefile  go.vim  relatedfile.vim
vim/colors/: Makefile  lab.vim  skhal.vim
vim/ftplugin/: Makefile  go_doc.vim
vim/plugin/: Makefile  lab_nerdtree.vim  nerdtree.vim  relatedfile.vim
x/: README.md
x/abseil/codelab/: .gitignore  BUILD  MODULE.bazel  README.md  hello_world.cc
x/ast/: main.go
x/balancer/: main.go
x/feed/: README.md
x/htmlview/: main.go
x/kscope/: README.md  main.go
x/mdview/: main.go
x/proto/: README.md
x/serve/: main.go
x/sheet/: README.md  main.go
x/wasm/: README.md
(+1674 files in other folders)
