# Copyright 2026 Samvel Khalatyan. All rights reserved.
#
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.

[project]
name = "lab"
version = "0.1.0"
description = "R&D Lab"
readme = "README.md"
requires-python = ">=3.14"
license = "BSD-3-Clause"
authors = [{ name = "Samvel Khalatyan", email = "sn.khalatyan@gmail.com" }]

[project.urls]
repository = "https://github.com/skhal/lab"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
ansible = "^14.1.0"
