load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "find",
    srcs = ["find.cc"],
    hdrs = ["find.h"],
    implementation_deps = ["@abseil-cpp//absl/status"],
    visibility = ["//visibility:public"],
    deps = ["@abseil-cpp//absl/status:statusor"],
)

cc_test(
    name = "find_test",
    srcs = ["find_test.cc"],
    deps = [
        ":find",
        "@abseil-cpp//absl/status:status_matchers",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
